# prod-2026-otbor-stage-2

./: .gitlab-ci.yml  LICENSE  README.md
solution/: Dockerfile  pyproject.toml
solution/app/: auth.py  database.py  exceptions.py  fraud_rules.py  jwt.py  main.py  models.py  transactions.py  users.py
solution/app/dsl/: __init__.py  ast.py  parser.py  token.py  types.py
solution/app/routers/: __init__.py  auth.py  fraud_rules.py  stats.py  transactions.py  users.py
