[project]
name = "solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"email-validator>=2.3.0",
	"fastapi[standard]>=0.128.0",
	"psycopg2-binary>=2.9.11",
	"pwdlib[argon2]>=0.3.0",
	"pycountry>=24.6.1",
	"pyjwt>=2.10.1",
	"rich>=14.2.0",
	"sqlmodel>=0.0.31",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
